Added timing, introduced var, reduced visibility, minor refactoring